--- a/templates/rssfeeds.html
+++ b/templates/rssfeeds.html
@@ -26,7 +26,7 @@
     </div>
 </section>
 
-<!-- ✅ Load External JavaScript File -->
+<!-- Load External JavaScript File -->
 <script src="{{ url_for('static', filename='assets/js/rssfeeds.js') }}"></script>
 
 {% endblock %}
