--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -1235,14 +1235,8 @@ h6 {
 #posts-container {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(550px, 1fr)); /* Responsive grid */
-  gap: 0px; /* Adjust gap */
+  gap: 1rem; /* Adjust gap */
   grid-auto-flow: dense; /* Forces better packing */
-}
-
-#posts-container {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: stretch; /* Ensures tiles stretch properly */
 }
 
 #posts-container .col {
@@ -1253,26 +1247,21 @@ h6 {
   flex: 1; /* Ensures equal height for uniformity */
 }
 
-#posts-container {
-  column-count: 4;
-  column-gap: 1rem;
-}
-
 @media (max-width: 1200px) {
   #posts-container {
-      column-count: 3;
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
   }
 }
 
 @media (max-width: 992px) {
   #posts-container {
-      column-count: 2;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   }
 }
 
 @media (max-width: 768px) {
   #posts-container {
-      column-count: 1;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   }
 }
 
