--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -1231,12 +1231,11 @@ h6 {
   font-size: 13px;
   color: #012970;
 }
-
 #posts-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(550px, 1fr)); /* Responsive grid */
-  gap: 1rem; /* Adjust gap */
-  grid-auto-flow: dense; /* Forces better packing */
+ *display: grid;
+  *grid-template-columns: repeat(5, 1fr); /* 5 columns */
+  *gap: 1rem; /* Adjust gap */
+  *grid-auto-flow: dense; /* Forces better packing */
 }
 
 #posts-container .col {
@@ -1246,26 +1245,101 @@ h6 {
 .card {
   flex: 1; /* Ensures equal height for uniformity */
 }
+.fixed{max-width: 20%;}
 
-@media (max-width: 1200px) {
+.masonry-item .post_image{
+  height:150px;
+  object-fit: cover;
+}
+
+
+.masonry-item .card-body .card-title{
+  
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+@media (max-width: 1500px) {
   #posts-container {
-    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    grid-template-columns: repeat(4, 1fr); /* 4 columns */
   }
+  .fixed{max-width: 25%;}
 }
 
 @media (max-width: 992px) {
   #posts-container {
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-columns: repeat(3, 1fr); /* 3 columns */
+  }
+  .fixed{max-width: 33.33%;}
+  .masonry-item .card-body{
+    padding: 0px 10px 10px 10px;
+  }
+  .masonry-item .card-body .card-text{
+    font-size: 14px;
+  }
+  .masonry-item .card-body .card-title{
+    font-size: 16px;
+    padding-top: 0px;
+    padding-bottom: 0px;
   }
 }
 
 @media (max-width: 768px) {
   #posts-container {
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-template-columns: repeat(2, 1fr); /* 2 columns */
+  }
+  .fixed{max-width: 50%;}
+  .masonry-item .card-body{
+    padding: 0px 10px 10px 10px;
+  }
+  .masonry-item .card-body .card-text{
+    font-size: 12px;
+  }
+  .masonry-item .card-body .card-title{
+    font-size: 14px;
+    padding-top: 0px;
+    padding-bottom: 0px;
   }
 }
+
+@media (max-width: 576px) {
+  #posts-container {
+    grid-template-columns: 1fr; /* 1 column */
+  }
+  .fixed{max-width: 50%;}
+  #main {
+    padding: 0px 8px;
+}
+.masonry-item{
+  padding:0px 8px;
+}
+}
+
+@media (max-width: 379.98px) {
+  #posts-container {
+    grid-template-columns: 1fr; /* 1 column */
+  }
+  .fixed{max-width: 100%;}
+}
+
+@media (min-width: 1500px) {
+  .masonry-item .post_image{
+    height:200px;
+  }
+}
+@media (min-width: 1991.98px) {
+  .masonry-item .post_image{
+    height:250px;
+  }
+}
+
 
 .post-item {
   break-inside: avoid;
   margin-bottom: 1rem;
 }
+
+
+.masonry-item {
+  margin-bottom:20px;
+}
+
