--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,6 @@
 <!-- footer.html -->
 <footer id="footer" class="footer">
   <div class="copyright">
-    &copy; Copyright <strong><span>CustomAdmin</span></strong>. All Rights Reserved
+    &copy; Copyright <strong><span>InstaNEWS</span></strong>. All Rights Reserved
   </div>
 </footer>
