--- a/templates/register.html
+++ b/templates/register.html
@@ -49,9 +49,9 @@
             <div class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center">
 
               <div class="d-flex justify-content-center py-4">
-                <a href="{{ url_for('home') }}" class="logo d-flex align-items-center w-auto">
+                <a href="{{ url_for('dashboard') }}" class="logo d-flex align-items-center w-auto">
                   <img src="{{ url_for('static', filename='assets/img/logo.png') }}" alt="">
-                  <span class="d-none d-lg-block">NiceAdmin</span>
+                  <span class="d-none d-lg-block">InstaNEWS</span>
               </a>
               </div><!-- End Logo -->
 
@@ -82,7 +82,6 @@
                     <div class="col-12">
                       <label for="yourUsername" class="form-label">Username</label>
                       <div class="input-group has-validation">
-                        <span class="input-group-text" id="inputGroupPrepend">@</span>
                         <input type="text" name="username" class="form-control" id="yourUsername" required>
                         <div class="invalid-feedback">Please choose a username.</div>
                       </div>
@@ -132,7 +131,7 @@
                 <!-- You can delete the links only if you purchased the pro version. -->
                 <!-- Licensing information: https://bootstrapmade.com/license/ -->
                 <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/ -->
-                Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+                Designed by <a href="https://instanews.ro/">InstaNEWS</a>
               </div>
 
             </div>
