--- a/templates/header.html
+++ b/templates/header.html
@@ -4,7 +4,7 @@
   <div class="d-flex align-items-center justify-content-between">
     <a href="/" class="logo d-flex align-items-center">
       <img src="{{ url_for('static', filename='assets/img/logo.png') }}" alt="Logo">
-      <span class="d-none d-lg-block">CustomAdmin</span>
+      <span class="d-none d-lg-block">InstaNEWS</span>
     </a>
     <i class="bi bi-list toggle-sidebar-btn"></i>
   </div>
