--- a/templates/login.html
+++ b/templates/login.html
@@ -44,7 +44,7 @@
               <div class="d-flex justify-content-center py-4">
                 <a href="{{ url_for('dashboard') }}" class="logo d-flex align-items-center w-auto">
                   <img src="{{ url_for('static', filename='assets/img/logo.png') }}" alt="">
-                  <span class="d-none d-lg-block">NiceAdmin</span>
+                  <span class="d-none d-lg-block">InstaNEWS</span>
                 </a>
               </div><!-- End Logo -->
 
@@ -76,7 +76,6 @@
                     <div class="col-12">
                       <label for="yourUsername" class="form-label">Username</label>
                       <div class="input-group has-validation">
-                        <span class="input-group-text" id="inputGroupPrepend">@</span>
                         <input type="text" name="username" class="form-control" id="yourUsername" required>
                         <div class="invalid-feedback">Please enter your username.</div>
                       </div>
@@ -106,7 +105,7 @@
               </div>
 
               <div class="credits">
-                Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+                Designed by <a href="https://instanews.ro/">InstaNEWS</a>
               </div>
 
             </div>
